--- a/templates/home.html
+++ b/templates/home.html
@@ -15,5 +15,6 @@
 </div>
 
 <div class="row">
-	Hello this is my experimental app intended to sharing your favorite music across the online.
+	Hello this is my experimental app intended to sharing your favorite music across the online.<br/>
+	<a href="https://github.com/sharavsambuu/songchirp">GITHUB REPO</a>
 </div>
