changing a design a little bit

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,9 +4,8 @@
 	    <div class="container">
 			<a class="brand" href="#/">Songchirp</a>
 			<ul class="nav">
-				<li><a href="#/">Home</a></li>
-				<li><a href="#/new">New</a></li>
 				<li><a href="#/music">Music</a></li>
+				<li><a href="#/new">Add</a></li>
 				<li class="active"><a href="#/about">About</a></li>
 			</ul>
 	    </div>
@@ -15,16 +14,7 @@
 </div>
 
 <div class="row">
-	<center>
-	<address>
-	  <!--
-	  <strong>Sharavsambuu Gunchinish</strong><br>
-	  <a href="mailto:#">sharavsambuu@gmail.com</a><br/>
-	  Muren, Khuvsgul, Mongolia<br>
-	  <abbr title="Phone"></abbr>
-	  -->
-	  <a href="http://www.twitter.com/_prompto">@_prompto</a>
-	</address>
-
-	</center>
+	Hello this is my experimental app intended to sharing your favorite music across the online.<br/>
+	<a href="https://github.com/sharavsambuu/songchirp">GITHUB REPO</a><br/>
+	<a href="http://www.twitter.com/_prompto">@_prompto</a>
 </div>
