--- a/templates/music.html
+++ b/templates/music.html
@@ -4,9 +4,8 @@
 	    <div class="container">
 			<a class="brand" href="#/">Songchirp</a>
 			<ul class="nav">
-				<li><a href="#/">Home</a></li>
-				<li><a href="#/new">New</a></li>
 				<li class="active"><a href="#/music">Music</a></li>
+				<li><a href="#/new">Add</a></li>
 				<li><a href="#/about">About</a></li>
 			</ul>
 	    </div>
@@ -14,36 +13,16 @@
 	</div>
 </div>
 <div class="row">
-	<div ng-repeat="music in musicList">
-		<br/><a href="#/music/{{music.id}}"><b>[{{music.type}}] {{music.name}}</b></a> {{music.play_count}}
-		<!--
-		<div ng-switch on="music.type" >
-	        <div ng-switch-when="youtube">
-	    		<iframe width="420" height="315" src="http://www.youtube.com/embed/{{music.source}}" frameborder="0" allowfullscreen></iframe><br/>
-	        </div>
-	        <div ng-switch-when="vimeo">
-	        	<iframe src="http://player.vimeo.com/video/{{music.source}}" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-	        </div>
-	        <div ng-switch-when="soundcloud">
-	        	http://developers.soundcloud.com/docs/widget#quick-start 
-	        	<script type="text/javascript" src="scripts/soundcloud.player.api.js"></script>
-				<script type="text/javascript">
-					soundcloud.addEventListener('onPlayerReady', function(player, data) {
-						player.api_play();
-					});
-				</script>
-				<object height="81" width="100%" id="mySoundCloudPlayer" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000">
-					<param name="movie" value="http://player.soundcloud.com/player.swf?url={{music.source}}&enable_api=true&object_id=myPlayer"></param>
-					<param name="allowscriptaccess" value="always"></param>
-					<embed allowscriptaccess="always" height="81" src="http://player.soundcloud.com/player.swf?url={{music.source}}&enable_api=true&object_id=myPlayer" type="application/x-shockwave-flash" width="100%" name="myPlayer"></embed>
-				</object>
-	        </div>
-	        <div ng-switch-default>
-	        	<audio src="{{music.source}}" controls="controls">
-					Your browser does not support the audio element.
-				</audio>
-			</div>
-		</div>
-	-->
-	</div>
+	<a class="btn btn-large btn-warning" href="#/next"><i class="icon-play"></i> Play radio</a>
+	<br/><br/>
+	Recently added songs <br/>
+	<table class="table table-hover">
+		<tr ng-repeat="music in musicList">
+			<td>
+			<img ng-src="assets/img/{{music.type}}.png"/>
+			</td>
+			<td><a href="#/music/{{music.id}}"><b>{{music.name}}</b></a></td>
+		    <td>{{music.play_count}}</td>
+		</tr>
+	</table>
 </div>
