--- a/templates/musicview.html
+++ b/templates/musicview.html
@@ -4,9 +4,8 @@
 	    <div class="container">
 			<a class="brand" href="#/">Songchirp</a>
 			<ul class="nav">
-				<li><a href="#/">Home</a></li>
-				<li><a href="#/new">New</a></li>
 				<li class="active"><a href="#/music">Music</a></li>
+				<li><a href="#/new">Add</a></li>
 				<li><a href="#/about">About</a></li>
 			</ul>
 	    </div>
@@ -15,12 +14,13 @@
 </div>
 <div class="row">
 	<div ng-repeat="music in musicList">
-		<a class="btn" href="#/next">Next</a><br/>
+		<a class="btn btn-large" href="#/next">Next</a><br/>
 		<a href="#/music/{{music.id}}"><b>[{{music.type}}] {{music.name}}</b></a> 
 		<span>{{music.play_count}} times played</span><br/>
 		<div ng-switch on="music.type" >
 	        <div ng-switch-when="youtube">
-	    		<iframe width="420" height="315" src="http://www.youtube.com/embed/{{music.source}}?autoplay=1" frameborder="0" allowfullscreen></iframe><br/>
+	        	<iframe width="420" height="315" src="http://www.youtube.com/embed/{{music.source}}?autoplay=1" frameborder="0" allowfullscreen></iframe>
+				<br/>
 	        </div>
 	        <div ng-switch-when="vimeo">
 	        	<iframe src="http://player.vimeo.com/video/{{music.source}}?autoplay=1" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
