--- a/templates/new.html
+++ b/templates/new.html
@@ -4,9 +4,8 @@
 	    <div class="container">
 			<a class="brand" href="#/">Songchirp</a>
 			<ul class="nav">
-				<li><a href="#/">Home</a></li>
-				<li class="active"><a href="#/new">New</a></li>
 				<li><a href="#/music">Music</a></li>
+				<li class="active"><a href="#/new">Add</a></li>
 				<li><a href="#/about">About</a></li>
 			</ul>
 	    </div>
