implemented non-stop-play using popcornjs library

--- a/views/index.html
+++ b/views/index.html
@@ -2,17 +2,16 @@
 <html ng-app="songchirp" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<title></title>
+	<title>SongChirp</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-	<!--<link rel="stylesheet" type="text/css" href="assets/css/styles.css">-->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
+	<script type="text/javascript" src="http://popcornjs.org/code/dist/popcorn-complete.js"></script>
 	<script src="assets/js/controllers.js"></script>
 	<script src="assets/js/main.js"></script>
-
 </head>
 <body>
-<div class="container">
-	<div ng-view></div>
-</div>
+	<div class="container">
+		<div ng-view></div>
+	</div>
 </body>
 </html>
