--- a/templates/musicview.html
+++ b/templates/musicview.html
@@ -19,24 +19,32 @@
 		<span>{{music.play_count}} times played</span><br/><br/>
 		<div ng-switch on="music.type" >
 	        <div ng-switch-when="youtube">
-	        	<iframe width="420" height="315" src="http://www.youtube.com/embed/{{music.source}}?autoplay=1" frameborder="0" allowfullscreen></iframe>
-				<br/>
+	        	<!--<iframe width="420" height="315" src="http://www.youtube.com/embed/{{music.source}}?autoplay=1" frameborder="0" allowfullscreen></iframe>-->
+	        	<div id="youtubeMusic" style="width: 360px; height: 300px;" ></div>
+				{{startYoutube(music.source)}}
 	        </div>
 	        <div ng-switch-when="vimeo">
-	        	<iframe src="http://player.vimeo.com/video/{{music.source}}?autoplay=1" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	        	<!--<iframe src="http://player.vimeo.com/video/{{music.source}}?autoplay=1" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>-->
+	        	<div id="vimeoMusic" style="width: 360px; height: 300px;" ></div>
+				{{startVimeo(music.source)}}
 	        </div>
 	        <div ng-switch-when="soundcloud">
-	        	<iframe width="100%" height="200" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url={{music.source}}&show_artwork=true&auto_play=true"></iframe>
+	        	<!--<iframe width="100%" height="200" scrolling="no" frameborder="no" src="http://w.soundcloud.com/player/?url={{music.source}}&show_artwork=true&auto_play=true"></iframe>-->
+	        	<div id="soundcloudMusic" style="width: 100%; height: 200px;"></div>
+				{{startSoundcloud(music.source)}}
 	        </div>
 	        <div ng-switch-default>
-	        	<audio src="{{music.source}}" controls="controls" autoplay="autoplay">
-					Your browser does not support the audio element.
+	        	<audio height="180" width="300" id="mp3Music" controls>
+					<source src="{{music.source}}"/>
 				</audio>
+				{{startMp3()}}
 			</div>
     	</div>
+    	{{time.now}}
     	<!--
     	<a class="btn" href="#/music/delete/{{music.id}}">delete</a>
     	-->
-    
-	</div>
+    </div>
+    <br/>
+    <span id="debug">debug...</span>
 </div>
