--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 	<title>SongChirp</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
 	<script type="text/javascript" src="http://popcornjs.org/code/dist/popcorn-complete.js"></script>
 	<script src="assets/js/controllers.js"></script>
@@ -13,5 +14,14 @@
 	<div class="container">
 		<div ng-view></div>
 	</div>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-39358647-1', 'songchirp.appspot.com');
+		ga('send', 'pageview');
+	</script>
 </body>
 </html>
