--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="row">
-	Hello this is my experimental app intended to sharing your favorite music across the online.<br/>
+	Hello this is my experimental app intended to listening and sharing your favorite music across the online.<br/>
 	<a href="https://github.com/sharavsambuu/songchirp">GITHUB REPO</a><br/>
 	<a href="http://www.twitter.com/_prompto">@_prompto</a>
 </div>
