--- a/templates/new.html
+++ b/templates/new.html
@@ -14,7 +14,7 @@
 </div>
 
 <div class="row">
-	<center>
+	<div class="span4">
 		<form ng-submit="submitMusic()">
 			<select name="type" ng-model="musicType" ng-options="musicType for musicType in musicTypes"></select><br/>
 			<input  name="name" type="text" ng-model="musicName" size="30" placeholder="music name..." required ><br/>
@@ -25,16 +25,15 @@
 		{{musicType | json}}<br/>
 		{{musicName | json}}<br/>
 		{{musicSource | json}}<br/>
-	</center>
-	<br/><br/><br/>
-	<form ng-submit="searchMusic()">
-		<input type="text" ng-model="searchText" size="60" placeholder="search value..."/>
-		<input type="submit">
-	</form>
-	<!--<a class="btn" ng-click="searchMusic()">Fetch</a><br/>
-	<input type="text" ng-model="searchText" size="60" placeholder="search value..."/>-->
-	<div ng-repeat="music in musicList">
-		{{music.name}}<br/>
+	</div>
+	<div class="span8">
+		<form ng-submit="searchMusic()">
+			<input type="text" ng-model="searchText" size="80" placeholder="search value..."/>
+		</form>
+		<div ng-repeat="music in musicList">
+			<a href="#/music/{{music.id}}"><b> {{music.name}}</b></a> 
+		</div>
+		<button class="btn" ng-click="generateMusicQueue()">generate music queue</button>
 	</div>
 
 </div>
