--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
-	<script type="text/javascript" src="http://popcornjs.org/code/dist/popcorn-complete.js"></script>
+	<script type="text/javascript" src="assets/js/popcorn-complete.min.js"></script>
 	<script src="assets/js/controllers.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script>
