--- a/templates/musicview.html
+++ b/templates/musicview.html
@@ -6,7 +6,7 @@
 			<ul class="nav">
 				<li class="active"><a href="#/music">Music</a></li>
 				<li><a href="#/new">Add</a></li>
-				<li><a href="#/automat">Automat</a></li>
+				<li><a href="#/automat">Automatique</a></li>
 				<li><a href="#/about">About</a></li>
 			</ul>
 	    </div>
